# battleship_environment

./: .gitignore  README.md  env.example  grpo.sh  pyproject.toml  reward_component_stats.json  reward_exploring.md  setup.sh  vllm.sh  wandb_export_2025-06-13T17_03_01.518-05_00.csv
launch/: grpo.sh  setup.sh  vllm.sh
scripts/: battleship_env.py  battleship_game.py  config.py  create_sft_data.py  create_sft_data_loop.py  data_gen.py  eval.py  evaluate.py  evaluate_model.py  fun.py  generate_sft_data.py  grpo.py  inf.py  merge.py  sft.py  sft_warmup.py  test.py  test_inference.py  train.py  train_grpo.py  train_sft_warmup.py  transformers_test.py  upload_checkpoint.py  upload_dataset.py  upload_dataset_merge.py  vf_vllm_spawn.py  vllm.py
scripts/dataset/: analyze.py  analyze_generated_dataset.py  create_board_dataset.py  create_dataset.py  create_sft_data.py  create_synthetic_games.py  create_synthetic_sft_data.py  fix_battleship_sft_format.py  generate_reasoning_with_claude.py  patch_sink_tags.py  upload_board_dataset.py  upload_dataset.py  upload_dataset_merge.py  upload_dataset_overwrite.py  upload_sft_dataset.py
scripts/eval/: evaluate.py  evaluate_model.py  test_reward_sanity_real.py
scripts/misc/: count_tokens.py  inspect_data.py  inspect_data_detailed.py  interactive_emulator.py  test_data.py  test_emulator.py
scripts/train/: train_grpo.py  train_sft_warmup.py
src/: battleship_env.py  battleship_game.py  config.py  local_openai.py  main.py  parser.py
src/battleship_emulator/: __init__.py  battleship_emulator.py  models.py
src/battleship_environment/: __init__.py  battleship_env.py  prompts.py
src/battleship_grpo/: __init__.py  battleship_env.py  battleship_game.py
src/battleship_grpo/rewards/: __init__.py  reward_functions.py
src/local_openai/: __init__.py  facade.py
src/local_openai/backend/: __init__.py  base.py  strategy_runner.py  transformers.py
src/local_openai/backend/strategies/: base.py  information_gain.py  parity_hunt.py  random_guess.py
