[project]
name = "qwen3-battleship-grpo"
version = "0.1.0"
description = "Training Qwen3 to play battleship"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "torch>=2.4.0",
    "huggingface-hub>=0.20.0",
    "wandb>=0.16.0",
    "verifiers[all]>=0.1.0",
]

[tool.uv]
package = true