[project]
name = "battleship-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Thomas", email = "lucienthomas00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.2.post0",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"
